--- a/app/src/main/res/layout/options_fragment.xml
+++ b/app/src/main/res/layout/options_fragment.xml
@@ -15,7 +15,7 @@
             android:id="@+id/play_button"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:background="@drawable/playButton"/>
+            android:background="@drawable/play_button"/>
 
     </LinearLayout>
 
