--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,25 +14,23 @@
         android:textColor="#FFFFFF" />
     <ImageButton
         android:id="@+id/options_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="top|left"
         android:background="@drawable/options_gear"/>
     <Button
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="40dp"
         android:layout_gravity="center"
         android:text="@string/start_button"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:text="@string/kittens_remaining"/>
+
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:layout_gravity="top|right"
         tools:text="Time"/>
     <LinearLayout
@@ -42,4 +40,13 @@
         android:layout_gravity="left|center"
         android:orientation="vertical">
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/remaining"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_gravity="top|center"
+        tools:text="Kittens Remaining"
+         />
 </FrameLayout>
